--- a/e/ehrenburg-ilya/index.html
+++ b/e/ehrenburg-ilya/index.html
@@ -31,7 +31,7 @@
 				Ilya Ehrenburg (26 Jan. 1891 &mdash; 31 Aug. 1967) was a Soviet-Jewish journalist and the <a href="/s/soviet-union/index.html">Soviet Union</a>&rsquo;s main war <a href="/p/propaganda/index.html">propagandist</a>. He was put in charge of submitting daily articles to the Western Allies in order to foment <q>hate, hate, and more hate</q> against everything German, as Stalin put it. In fact, Ehrenburg ended up writing more than one article per day, sometimes up to five, inventing German atrocities in assembly-line fashion, and depicting Germans as subhuman monsters, calling upon his readers to kill every single German, wherever they may be found. 
 			</p>
 			<p>
-				Together with another prominent Soviet-Jewish journalist, <a href="/grossman-vasily/index.html">Vasily Grossman</a>, Ehrenburg compiled a collection of Soviet atrocity stories on claimed German wartime crimes during the war, titled <i>The Black Book.</i> (See the entry on <a href="/grossman-vasily/index.html">Grossman</a> 
+				Together with another prominent Soviet-Jewish journalist, <a href="/g/grossman-vasily/index.html">Vasily Grossman</a>, Ehrenburg compiled a collection of Soviet atrocity stories on claimed German wartime crimes during the war, titled <i>The Black Book.</i> (See the entry on <a href="/g/grossman-vasily/index.html">Grossman</a> 
 			</p>
 			<p>
 				Ehrenburg was also the first person to definitively and publicly announce that the Germans had killed <a href="/s/six-million/index.html">six million Jews</a> &mdash; at a time when the war wasn&rsquo;t yet over and no one could possibly have known the actual death toll: Ilya Ehrenburg in an article headlined, <q>Remember, Remember, Remember,</q> <i>Soviet War News,</i> 22 December 1944 (pp. 4f.): 
