--- a/l/langfus-leib/index.html
+++ b/l/langfus-leib/index.html
@@ -37,7 +37,7 @@
 				<li>Finally, the ghost writer claims that all that was left of the entire transport after this conflagration had died down was <q>a small pile of burnt bone</q> that was simply <q>thrown aside,</q> although burning, say, a thousand people would have left a veritable mountain of human and wood ashes, including many partially burned body parts and charcoaled wood pieces, probably some 10 cubic meters in all.</li>
 			</ul>
 			<p>
-				(For details, see <a href="/bibliography/index.html#Mattogno2021">Mattogno 2021</a>, pp. 259-261; see also the entry on <a href="/lewental-salmen/index.html">Salmen Lewental</a>.) 
+				(For details, see <a href="/bibliography/index.html#Mattogno2021">Mattogno 2021</a>, pp. 259-261; see also the entry on <a href="/l/lewental-salmen/index.html">Salmen Lewental</a>.) 
 			</p>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
