--- a/l/limousin-henri/index.html
+++ b/l/limousin-henri/index.html
@@ -27,7 +27,7 @@
 			<nav>
 				<ul class="pager">
 					<li class="previous"><a href="/l/liebehenschel-arthur/index.html">&larr; Liebehenschel, Arthur</a></li>
-					<li class="next"><a href="/litwinska-sofia/index.html">Litwinska, Sofia &rarr;</a></li>
+					<li class="next"><a href="/l/litwinska-sofia/index.html">Litwinska, Sofia &rarr;</a></li>
 				</ul>
 			</nav>
 <!-- #bbinclude "footer.incl" -->
