--- a/cross-references/index.html
+++ b/cross-references/index.html
@@ -22,6 +22,7 @@
 			<ul class="columns">
 				<li><a href="/cross-references/absurdities.html">Absurdities &amp; Lies</a></li>
 				<li><a href="/cross-references/concepts-terms.html">Concepts &amp; Terms</a></li>
+				<li><a href="/cross-references/convergence-of-evidence.html">Convergence of Evidence</a></li>
 				<li><a href="/cross-references/documents.html">Documents</a></li>
 				<li><a href="/cross-references/events.html">Events</a></li>
 				<li><a href="/cross-references/instruments.html">Instruments</a></li>
