--- a/c/convergence-of-evidence/index.html
+++ b/c/convergence-of-evidence/index.html
@@ -36,47 +36,9 @@
 			<p>
 				(For more details, see <a href="/bibliography/index.html#Mattogno2019">Mattogno 2019</a>, pp. 389-440; <a href="/bibliography/index.html#Rudolf_Mattogno">Rudolf/Mattogno 2017</a>, pp. 203-280.)
 			</p>
-			<h4>
-				List of entries dealing with forced or real <q>convergence of evidence</q> &mdash; in truth or lies:
-			</h4>
-			<ul>
-				<li><a href="/a/air-photos/index.html">Air Photos</a></li>
-				<li><a href="/a/amiel-szymon/index.html">Amiel, Szymon</a></li>
-				<li><a href="/b/babi-yar/index.html">Babi Yar</a></li>
-				<li><a href="/b/bednarz-wladyslaw/index.html">Bednarz, W&#322;adys&#322;aw</a></li>
-				<li><a href="/b/berger-oskar/index.html">Berger, Oskar</a></li>
-				<li><a href="/b/broad-pery-s/index.html">Broad, Pery S.</a></li>
-				<li><a href="/b/bunkers/index.html">Bunkers</a></li>
-				<li><a href="/c/cremation-propaganda/index.html">Cremation Propaganda</a></li>
-				<li><a href="/c/criminal-traces/index.html">Criminal Traces</a></li>
-				<li><a href="/d/dragon-szlama/index.html">Dragon, Szlama</a></li>
-				<li><a href="/f/falborski-bronislaw/index.html">Falborski, Bronis&#322;aw</a></li>
-				<li><a href="/f/farber-yuri/index.html">Farber, Yuri</a></li>
-				<li><a href="/f/fat-extracted-from-burning-corpses/index.html">Fat, Extracted from Burning Corpses</a></li>
-				<li><a href="/f/first-gassing-at-auschwitz/index.html">First Gassing, at Auschwitz</a></li>
-				<li><a href="/h/himmler-visits/index.html">Himmler Visits</a></li>
-				<li><a href="/k/kon-stanislaw/index.html">Kon, Stanis&#322;aw</a></li>
-				<li><a href="/l/lequeux-maurice/index.html">Lequeux, Maurice</a></li>
-				<li><a href="/l/lichtenstein-mordecai/index.html">Lichtenstein, Mordecai</a></li>
-				<li><a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz, Zdzis&#322;aw</a></li>
-				<li><a href="/l/lumberjacks/index.html">Lumberjacks</a></li>
-				<li><a href="/m/morgen-konrad/index.html">Morgen, Konrad</a></li>
-				<li><a href="/o/obrycki-narcyz-tadeusz/index.html">Obrycki, Narcyz T.</a></li>
-				<li><a href="/p/pohl-oswald/index.html">Pohl, Oswald</a></li>
-				<li><a href="/s/sehn-jan/index.html">Sehn, Jan</a></li>
-				<li><a href="/s/self-immolating-bodies/index.html">Self-Immolating Bodies</a></li>
-				<li><a href="/s/showers/index.html">Showers</a></li>
-				<li><a href="/s/soap-from-jewish-corpses/index.html">Soap, from Jewish Corpses</a></li>
-				<li><a href="/s/standing-upright-dead-gassing-victims/index.html">Standing Upright, Dead Gassing Victims</a></li>
-				<li><a href="/s/stanek-franciszek/index.html">Stanek, Franciszek</a></li>
-				<li><a href="/t/tauber-henryk/index.html">Tauber, Henryk</a></li>
-				<li><a href="/t/towels-soap-toothbrushes-inside-gas-chambers/index.html">Towels, Soap, inside Gas Chambers</a></li>
-				<li><a href="/t/turowski-eugeniusz/index.html">Turowski, Eugeniusz</a></li>
-				<li><a href="/v/venezia-shlomo/index.html">Venezia, Shlomo</a></li>
-				<li><a href="/w/willenberg-samuel/index.html">Willenberg, Samuel</a></li>
-				<li><a href="/w/witch-trials/index.html">Witch Trials</a></li>
-				<li><a href="/z/zurawski-mieczyslaw/index.html">&#379;urawski, Mieczys&#322;aw</a></li>
-			</ul>
+			<p>
+				(See also our <a href="/cross-references/convergence-of-evidence.html">Cross-reference page on Convergence of Evidence</a>.)
+			</p>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
