--- a/README.html
+++ b/README.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
 	<meta charset="utf-8" />
 </head>
@@ -11,7 +11,7 @@
 
 <h2 id="welcome">Welcome!</h2>
 
-<p>If this is the first time you are using this website, or if you would like to get a general orientation about this encyclopedia, and how it relates to other competing encyclopedias, either read our <a href="https://encyclopedia.historiography-project.com/introduction/index.html">Introduction</a>, or watch our 30-minutes introduction movie right here:</p>
+<p>If this is the first time you are using this website, or if you would like to get a general orientation about this encyclopedia, and how it relates to other competing encyclopedias, either read our <a href="https://encyclopedia.historiography-project.com/introduction/index.html">Introduction</a>, or watch our 30-minutes introduction movie on the main page.</p>
 
 <p>If you are looking for a general introduction into <a href="https://encyclopedia.historiography-project.com/h/holocaust-the/index.html">The Holocaust</a>, read our <a href="https://encyclopedia.historiography-project.com/h/holocaust-the/index.html">entry about this over-arching topic</a>, which will guide you through this historical labyrinth. It is also available as an audio and a video presentation.</p>
 
